--- a/pages/constitution.html
+++ b/pages/constitution.html
@@ -113,77 +113,135 @@
 
     <main>
 
+      <section class="bg-gray-50 py-16">
+  <div class="max-w-5xl mx-auto px-6 text-center">
+    <!-- Heading -->
+    <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">
+      Constitution of Federal Youth Parliament
+    </h1>
+    <p class="text-lg text-gray-600 mb-12 max-w-3xl mx-auto">
+      The Federal Youth Parliament (FYP) is guided by its constitution, ensuring transparency,
+      inclusivity, and leadership development among youth. Explore the details below or
+      download the complete document.
+    </p>
+
+    <!-- Constitution Content -->
+    <div class="bg-white shadow-lg rounded-2xl p-8 text-left border border-gray-200">
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Preamble</h2>
+      <p class="text-gray-700 leading-relaxed mb-6">
+        We, the youth of Pakistan, united under the Federal Youth Parliament, commit ourselves to 
+        promoting leadership, social responsibility, innovation, and progress for a brighter future.
+      </p>
+
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Article I: Membership</h2>
+      <ul class="list-disc pl-6 text-gray-700 mb-6 space-y-2">
+        <li>Membership is open to youth across Pakistan aged 18–30 years.</li>
+        <li>Each member shall adhere to the vision, mission, and values of FYP.</li>
+        <li>Members shall actively participate in events, discussions, and initiatives.</li>
+      </ul>
+
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Article II: Structure</h2>
+      <ul class="list-disc pl-6 text-gray-700 mb-6 space-y-2">
+        <li>The Parliament shall be divided into committees for governance, education, 
+            technology, and community development.</li>
+        <li>Each committee shall elect representatives democratically.</li>
+      </ul>
+
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Article III: Objectives</h2>
+      <p class="text-gray-700 leading-relaxed mb-6">
+        The primary objectives of the Federal Youth Parliament are to empower youth voices,
+        develop leadership, foster innovation, and encourage participation in national progress.
+      </p>
+
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Article IV: Amendments</h2>
+      <p class="text-gray-700 leading-relaxed mb-6">
+        Amendments to this constitution may be proposed by members and shall require 
+        approval by a two-thirds majority.
+      </p>
+
+      <!-- Download Button -->
+      <div class="mt-8 text-center">
+        <a href="./docs/FYP-Constitution.pdf" download
+          class="inline-block bg-green-600 text-white font-semibold px-6 py-3 rounded-xl shadow-md hover:bg-green-700 transition">
+          📄 Download Constitution (PDF)
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
     </main>
 
 
 
 
-     <!-- Footer -->
-  <footer class="bg-[#0b162c] text-white py-10">
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
+    <!-- ********************************Footer********************************** -->
+<footer class="bg-white text-gray-800 py-12 border-t border-gray-200">
+  <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-10">
 
-      <!-- Quick Links -->
-      <div>
-        <h2 class="text-xl font-bold mb-4">Quick Links</h2>
-        <ul class="space-y-2">
-          <li><a href="#" class="text-green-500 hover:underline">Privacy Policy</a></li>
-          <li><a href="#" class="text-green-500 hover:underline">About Us</a></li>
-          <li><a href="#" class="text-green-500 hover:underline">Contact</a></li>
-          <li><a href="#" class="text-green-500 hover:underline">Terms and Conditions</a></li>
-        </ul>
-      </div>
-
-      <!-- Logo + Description -->
-      <div class="text-center">
-        <div class="flex justify-center items-center mb-3">
-          <img src="../images/logo.jpg" alt="Logo" class="w-12 h-12 mr-2">
-          <h2 class="text-xl font-bold">
-            Youth Organization <span class="text-green-600">PAKISTAN</span>
-          </h2>
-        </div>
-        <p class="text-gray-300 text-sm">
-          Youth Organization Pakistan (YOP), founded in 2021, empowers 15,000+ members 
-          to drive social change, leadership, innovation, and national progress through 
-          development initiatives and global engagement.
-        </p>
-      </div>
-
-      <!-- Contact -->
-      <div>
-        <h2 class="text-xl font-bold mb-4">Contact</h2>
-        <ul class="space-y-3 text-gray-300">
-          <li class="flex items-center gap-2">
-            <i class="fa-solid fa-location-dot text-green-500"></i>
-            Royal Avenue, Islamabad, Pakistan
-          </li>
-          <li class="flex items-center gap-2">
-            <i class="fa-solid fa-phone text-green-500"></i>
-            +92 332 0047146
-          </li>
-          <li class="flex items-center gap-2">
-            <i class="fa-solid fa-envelope text-green-500"></i>
-            info@pakistanyouthorganization.com
-          </li>
-        </ul>
-
-        <!-- Social Icons -->
-        <div class="flex gap-4 mt-4">
-          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
-            <i class="fa-brands fa-facebook-f"></i>
-          </a>
-          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="#" class="bg-green-600 p-2 rounded-full text-white hover:bg-green-700">
-            <i class="fa-brands fa-linkedin-in"></i>
-          </a>
-        </div>
-      </div>
-
+    <!-- Quick Links -->
+    <div>
+      <h2 class="text-lg font-semibold mb-4 text-green-600">Quick Links</h2>
+      <ul class="space-y-2 text-gray-600">
+        <li><a href="#" class="hover:text-green-700 transition">Privacy Policy</a></li>
+        <li><a href="/pages/about.html" class="hover:text-green-700 transition">About Us</a></li>
+        <li><a href="/pages/contact.html" class="hover:text-green-700 transition">Contact</a></li>
+        <li><a href="#" class="hover:text-green-700 transition">Terms & Conditions</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <!-- Logo + Description -->
+    <div class="text-center">
+      <div class="flex justify-center items-center mb-4">
+        <img src="../images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
+        <h2 class="text-2xl font-bold">
+          Federal Youth <span class="text-green-600">PARLIMENT</span>
+        </h2>
+      </div>
+      <p class="text-gray-600 text-sm leading-relaxed">
+        Federal Youth Parliament (FYP) empowers young leaders from across Pakistan to engage in policy, leadership, and community development — driving innovation, collaboration, and a brighter future for the nation.
+      </p>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <h2 class="text-lg font-semibold mb-4 text-green-600">Contact</h2>
+      <ul class="space-y-3 text-gray-600 text-sm">
+        <li class="flex items-center gap-2">
+          <i class="fa-solid fa-location-dot text-green-600"></i>
+          Peshawar, Khyber Pakhtunkhwa, Pakistan
+        </li>
+        <li class="flex items-center gap-2">
+          <i class="fa-solid fa-phone text-green-600"></i>
+          +92 336 1098720 </li>
+        <li class="flex items-center gap-2">
+          <i class="fa-solid fa-envelope text-green-600"></i>
+          federalyouthparlimentpakistan@gmail.com
+        </li>
+      </ul>
+
+      <!-- Social Icons -->
+      <div class="flex gap-4 mt-5">
+        <a href="https://www.facebook.com/share/1726g84KvL/?mibextid=wwXIfr" class="w-10 h-10 flex items-center justify-center rounded-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition"">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        
+        <a href="https://www.instagram.com/federalyouthparliament?igsh=cGUwcnU3cWxmYWEx" class="w-10 h-10 flex items-center justify-center rounded-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition"">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bottom Line -->
+  <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
+    © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
+    <span class="text-yellow-600">All rights reserved.</span>
+  </div>
+</footer>
 </body>
 </html>
