--- a/pages/news.html
+++ b/pages/news.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </head>
 <body>
@@ -187,5 +188,71 @@
       </div>
     </aside>
   </main>
+  <!-- ********************************Footer********************************** -->
+<footer class="bg-white text-gray-800 py-12 border-t border-gray-200">
+  <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-10">
+
+    <!-- Quick Links -->
+    <div>
+      <h2 class="text-lg font-semibold mb-4 text-green-600">Quick Links</h2>
+      <ul class="space-y-2 text-gray-600">
+        <li><a href="#" class="hover:text-green-700 transition">Privacy Policy</a></li>
+        <li><a href="/pages/about.html" class="hover:text-green-700 transition">About Us</a></li>
+        <li><a href="/pages/contact.html" class="hover:text-green-700 transition">Contact</a></li>
+        <li><a href="#" class="hover:text-green-700 transition">Terms & Conditions</a></li>
+      </ul>
+    </div>
+
+    <!-- Logo + Description -->
+    <div class="text-center">
+      <div class="flex justify-center items-center mb-4">
+        <img src="../images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
+        <h2 class="text-2xl font-bold">
+          Federal Youth <span class="text-green-600">PARLIMENT</span>
+        </h2>
+      </div>
+      <p class="text-gray-600 text-sm leading-relaxed">
+        Federal Youth Parliament (FYP) empowers young leaders from across Pakistan to engage in policy, leadership, and community development — driving innovation, collaboration, and a brighter future for the nation.
+      </p>
+    </div>
+
+    <!-- Contact -->
+    <div>
+      <h2 class="text-lg font-semibold mb-4 text-green-600">Contact</h2>
+      <ul class="space-y-3 text-gray-600 text-sm">
+        <li class="flex items-center gap-2">
+          <i class="fa-solid fa-location-dot text-green-600"></i>
+          Peshawar, Khyber Pakhtunkhwa, Pakistan
+        </li>
+        <li class="flex items-center gap-2">
+          <i class="fa-solid fa-phone text-green-600"></i>
+          +92 336 1098720 </li>
+        <li class="flex items-center gap-2">
+          <i class="fa-solid fa-envelope text-green-600"></i>
+          federalyouthparlimentpakistan@gmail.com
+        </li>
+      </ul>
+
+      <!-- Social Icons -->
+      <div class="flex gap-4 mt-5">
+        <a href="https://www.facebook.com/share/1726g84KvL/?mibextid=wwXIfr" class="w-10 h-10 flex items-center justify-center rounded-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition"">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        
+        <a href="https://www.instagram.com/federalyouthparliament?igsh=cGUwcnU3cWxmYWEx" class="w-10 h-10 flex items-center justify-center rounded-full border border-green-600 text-green-600 hover:bg-green-600 hover:text-white transition"">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bottom Line -->
+  <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
+    © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
+    <span class="text-yellow-600">All rights reserved.</span>
+  </div>
+</footer>
 </body>
 </html>
