--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
           </svg>
         </button>
       </div>
-
+    
       <!-- Desktop Menu -->
 <div class="hidden lg:flex lg:items-center lg:space-x-6 text-gray-700 font-semibold">
   <a href="/" class="hover:text-green-700 hover:scale-110 hover:font-bold transition transform duration-200">Home</a>
@@ -110,28 +110,133 @@
 </nav>
 <main>
 
- <section class="w-full py-16 bg-[#FAF3DD]">
-    <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row items-center gap-10">
-        <div class="flex flex-col gap-6">
-        <h1 class="text-3xl font-bold">About FYP</h1>
-        <p class="text-lg text-gray-700">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae totam natus
-            tenetur voluptatibus sequi incidunt sunt rem, ea voluptate suscipit dolore cumque
-            at voluptas repellat!
+ <main>
+  <!-- Hero Section -->
+  <section class="relative bg-gray-900 text-white py-28 overflow-hidden">
+    <!-- Background -->
+    <div class="absolute inset-0">
+      <img src="../images/home/bg.jpg" alt="About Us" class="w-full h-full object-cover opacity-40">
+      <div class="absolute inset-0 bg-black/60"></div>
+    </div>
+
+    <!-- Content -->
+    <div class="relative max-w-5xl mx-auto px-6 text-center" data-aos="fade-up">
+      <h1 class="text-4xl md:text-6xl font-extrabold">About Us</h1>
+      <p class="mt-6 text-lg md:text-xl text-gray-200 max-w-3xl mx-auto">
+        Federal Youth Parliament is a platform of <span class="text-green-400 font-semibold">young changemakers</span>, 
+        committed to leadership, innovation, and creating lasting impact across Pakistan.
+      </p>
+    </div>
+  </section>
+
+  <!-- About FYP -->
+  <section class="w-full py-20 bg-[#FAF3DD]">
+    <div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row items-center gap-10">
+      <!-- Content -->
+      <div class="flex flex-col gap-6" data-aos="fade-right">
+        <h2 class="text-3xl md:text-4xl font-bold text-gray-800">
+          Who <span class="text-green-600">We Are</span>
+        </h2>
+        <p class="text-lg text-gray-700 leading-relaxed">
+          We are a youth-driven community passionate about empowering young voices and enabling 
+          them to become tomorrow’s leaders. Through collaborative efforts, educational programs, 
+          and impactful initiatives, we aim to shape a brighter and more inclusive future.
         </p>
         <a href="/membership"
-            class="hidden lg:inline-block bg-green-700 text-white font-bold rounded-full px-6 py-3 mt-2 hover:bg-green-800 transition w-fit">
-            Learn More
+          class="bg-green-700 text-white font-semibold rounded-full px-6 py-3 mt-2 hover:bg-green-800 transition w-fit">
+          Learn More
         </a>
-        </div>
-        <img src="../images/home/about-img.jpg"
-            alt="About FYP"
-            class="w-full md:w-1/2 rounded-lg shadow-md object-cover" />
+      </div>
+      <!-- Image -->
+      <img src="../images/home/about-img.jpg" alt="About FYP"
+        class="w-full md:w-1/2 rounded-xl shadow-lg object-cover" data-aos="fade-left" />
     </div>
-    </section>
+  </section>
 
+  <!-- Mission & Vision -->
+  <section class="w-full py-20 bg-white">
+    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+      <!-- Image -->
+      <div data-aos="fade-right">
+        <img src="../images/home/bg2.jpg" alt="Mission & Vision"
+          class="rounded-2xl shadow-lg object-cover w-full h-[400px]" />
+      </div>
+
+      <!-- Content -->
+      <div class="flex flex-col gap-6" data-aos="fade-left">
+        <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800">
+          Our <span class="text-green-600">Mission & Vision</span>
+        </h2>
+        <p class="text-lg text-gray-600 leading-relaxed">
+          We aim to empower young voices by creating opportunities for leadership, 
+          awareness, and impactful initiatives.  
+          Our vision is a nation where youth play a central role in shaping 
+          political, social, and community growth.
+        </p>
+        <ul class="space-y-3 text-gray-700">
+          <li class="flex items-center gap-2"> ✅ <span>Building leadership skills among youth</span></li>
+          <li class="flex items-center gap-2"> ✅ <span>Addressing public & political issues</span></li>
+          <li class="flex items-center gap-2"> ✅ <span>Creating positive impact through social work</span></li>
+        </ul>
+        <a href="/pages/constitution.html"
+          class="bg-green-700 text-white font-semibold px-6 py-3 rounded-full w-fit hover:bg-green-800 transition">
+          Read More
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Core Values -->
+  <section class="w-full py-20 bg-[#FAF3DD]">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h2 class="text-3xl md:text-4xl font-extrabold text-gray-800 mb-12">
+        Our <span class="text-green-600">Core Values</span>
+      </h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <!-- Value 1 -->
+        <div class="p-8 bg-white rounded-2xl shadow-md hover:shadow-xl transition" data-aos="zoom-in">
+          <h3 class="text-xl font-bold text-green-700 mb-4">Integrity</h3>
+          <p class="text-gray-600 text-base">We believe in honesty, accountability, and transparency in all our actions.</p>
+        </div>
+        <!-- Value 2 -->
+        <div class="p-8 bg-white rounded-2xl shadow-md hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="100">
+          <h3 class="text-xl font-bold text-green-700 mb-4">Collaboration</h3>
+          <p class="text-gray-600 text-base">We thrive on teamwork, partnerships, and collective efforts to bring change.</p>
+        </div>
+        <!-- Value 3 -->
+        <div class="p-8 bg-white rounded-2xl shadow-md hover:shadow-xl transition" data-aos="zoom-in" data-aos-delay="200">
+          <h3 class="text-xl font-bold text-green-700 mb-4">Innovation</h3>
+          <p class="text-gray-600 text-base">We embrace creativity and new ideas to solve problems and build solutions.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section class="relative bg-green-700 py-20 text-center text-white">
+    <div class="absolute inset-0">
+      <img src="../images/home/bg.jpg" alt="Join Us" class="w-full h-full object-cover opacity-20">
+      <div class="absolute inset-0 bg-green-900/70"></div>
+    </div>
+    <div class="relative z-10 max-w-4xl mx-auto px-6" data-aos="fade-up">
+      <h2 class="text-3xl md:text-5xl font-extrabold mb-6">Join Us Today</h2>
+      <p class="text-lg text-gray-200 mb-8">
+        Be part of a nationwide movement of young leaders working together 
+        for a brighter, stronger, and more inclusive Pakistan.
+      </p>
+      <div class="flex flex-col sm:flex-row gap-4 justify-center">
+        <a href="/pages/membership.html"
+          class="px-8 py-3 rounded-full bg-white text-green-700 font-semibold shadow-lg hover:bg-gray-100 transition duration-300">
+          Become a Member
+        </a>
+        <a href="/pages/contact.html"
+          class="px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-white font-semibold shadow-lg transition duration-300">
+          Contact Us
+        </a>
+      </div>
+    </div>
+  </section>
 </main>
-
 
 
 
