--- a/pages/executive.html
+++ b/pages/executive.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+     <!-- AOS CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -110,115 +112,220 @@
 </nav>
 
 
-<main>
-    <section class="w-full py-20 bg-[#FAF3DD]">
-  <div class="max-w-6xl mx-auto px-4">
-    <h1 class="font-bold text-3xl">Executive Members</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Executive Members | Federal Youth Parliament</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body class="bg-white text-gray-800">
 
-    <!-- Cards wrapper -->
-    <div class="mt-8 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-      
-    <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 hover:shadow-2xl transition duration-300 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
+ <!-- Hero Section -->
+<section class="relative w-full bg-gray-900 text-white py-28 overflow-hidden">
   <!-- Background Image -->
   <div class="absolute inset-0">
-    <img src="../images/executives/musa.jpg" alt="Background"
-      class="w-full h-full object-cover opacity-60" />
-    <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+    <img src="../images/home/bg.jpg" alt="Programs" class="w-full h-full object-cover opacity-40">
+    <div class="absolute inset-0 bg-black/50"></div>
   </div>
 
-  <!-- Profile Content -->
-  <div class="relative flex flex-col items-center p-6">
-    <img src="../images/executives/musa.jpg" alt="President"
-      class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-    <h3 class="text-xl font-bold text-gray-800">Musa Bukhari</h3>
-    <p class="text-green-700 font-semibold mb-3">President</p>
-    <p class="text-gray-700 text-center text-sm leading-relaxed">
-      Visionary leader dedicated to empowering youth through innovation, collaboration, 
-      and impactful community programs.
+  <!-- Content -->
+  <div class="relative max-w-5xl mx-auto px-6 text-center" data-aos="zoom-in">
+    <p class="text-green-400 font-semibold tracking-wide uppercase mb-4">
+      Federal Youth Parliament
     </p>
-  </div>
-
-  <!-- Social Media -->
-  <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-    <a href="https://www.facebook.com/share/1726g84KvL/?mibextid=wwXIfr" class="text-gray-500 hover:text-green-700 transition text-xl">
-      <i class="fab fa-facebook-f"></i>
-    </a>
-    <a href="https://www.instagram.com/federalyouthparliament?igsh=cGUwcnU3cWxmYWEx" class="text-gray-500 hover:text-green-700 transition text-xl">
-      <i class="fab fa-instagram"></i>
-    </a>
-  </div>
-</div>
-
-      <!-- Duplicate for more members -->
-
-     <!-- President Card -->
-<div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 hover:shadow-2xl transition duration-300 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
-  <!-- Background Image -->
-  <div class="absolute inset-0">
-    <img src="../images/executives/musa.jpg" alt="Background"
-      class="w-full h-full object-cover opacity-60" />
-    <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-  </div>
-
-  <!-- Profile Content -->
-  <div class="relative flex flex-col items-center p-6">
-    <img src="../images/executives/musa.jpg" alt="President"
-      class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-    <h3 class="text-xl font-bold text-gray-800">Musa Bukhari</h3>
-    <p class="text-green-700 font-semibold mb-3">President</p>
-    <p class="text-gray-700 text-center text-sm leading-relaxed">
-      Visionary leader dedicated to empowering youth through innovation, collaboration, 
-      and impactful community programs.
+    <h1 class="text-4xl md:text-6xl font-extrabold leading-tight">
+      Meet Our Leaders
+    </h1>
+    <p class="mt-6 text-lg md:text-xl text-gray-200 max-w-3xl mx-auto leading-relaxed">
+      The Executive Members of Federal Youth Parliament are visionary changemakers, 
+      dedicated to <span class="text-green-400 font-semibold">youth empowerment</span>, 
+      <span class="text-green-400 font-semibold">leadership</span>, and building a brighter future for Pakistan.
     </p>
-  </div>
 
-    <!-- Social Media -->
-  <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-    <a href="https://www.facebook.com/share/1726g84KvL/?mibextid=wwXIfr" class="text-gray-500 hover:text-green-700 transition text-xl">
-      <i class="fab fa-facebook-f"></i>
-    </a>
-    <a href="https://www.instagram.com/federalyouthparliament?igsh=cGUwcnU3cWxmYWEx" class="text-gray-500 hover:text-green-700 transition text-xl">
-      <i class="fab fa-instagram"></i>
-    </a>
-  </div>
-</div>
-
-
-
-<div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 hover:shadow-2xl transition duration-300 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl">
-  <!-- Background Image -->
-  <div class="absolute inset-0">
-    <img src="../images/executives/musa.jpg" alt="Background"
-      class="w-full h-full object-cover opacity-60" />
-    <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-  </div>
-
-  <!-- Profile Content -->
-  <div class="relative flex flex-col items-center p-6">
-    <img src="../images/executives/musa.jpg" alt="President"
-      class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-    <h3 class="text-xl font-bold text-gray-800">Musa Bukhari</h3>
-    <p class="text-green-700 font-semibold mb-3">President</p>
-    <p class="text-gray-700 text-center text-sm leading-relaxed">
-      Visionary leader dedicated to empowering youth through innovation, collaboration, 
-      and impactful community programs.
-    </p>
-  </div>
-
-  <!-- Social Media -->
-  <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-    <a href="https://www.facebook.com/share/1726g84KvL/?mibextid=wwXIfr" class="text-gray-500 hover:text-green-700 transition text-xl">
-      <i class="fab fa-facebook-f"></i>
-    </a>
-    <a href="https://www.instagram.com/federalyouthparliament?igsh=cGUwcnU3cWxmYWEx" class="text-gray-500 hover:text-green-700 transition text-xl">
-      <i class="fab fa-instagram"></i>
-    </a>
-  </div>
-</div>
-
+ 
 </section>
-  
 
+
+  <!-- Executive Members Section -->
+  <section class="w-full py-20 bg-white">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      <h2 class="font-bold text-3xl text-green-800 mb-12" data-aos="fade-up">
+        Executive Members
+      </h2>
+
+      <!-- Cards wrapper -->
+      <div class="mt-8 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+
+        <!-- Card 1 -->
+        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
+             data-aos="fade-right">
+          <div class="absolute inset-0">
+            <img src="../images/executives/vice-president.jpg" alt="Vice President"
+              class="w-full h-full object-cover opacity-60" />
+            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+          </div>
+          <div class="relative flex flex-col items-center p-6">
+            <img src="../images/executives/vice-president.jpg" alt="Vice President"
+              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+            <h3 class="text-xl font-bold text-gray-800">Salah Uddin Khan</h3>
+            <p class="text-green-700 font-semibold mb-3">Vice President</p>
+            <p class="text-gray-700 text-center text-sm leading-relaxed">
+              Visionary leader dedicated to empowering youth through innovation, collaboration, 
+              and impactful community programs.
+            </p>
+          </div>
+          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
+             data-aos="fade-up">
+          <div class="absolute inset-0">
+            <img src="../images/executives/president.jpg" alt="President"
+              class="w-full h-full object-cover opacity-60" />
+            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+          </div>
+          <div class="relative flex flex-col items-center p-6">
+            <img src="../images/executives/president.jpg" alt="President"
+              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+            <h3 class="text-xl font-bold text-gray-800">Muhammad Ibrar Khilji</h3>
+            <p class="text-green-700 font-semibold mb-3">President</p>
+            <p class="text-gray-700 text-center text-sm leading-relaxed">
+              Visionary leader dedicated to empowering youth through innovation, collaboration, 
+              and impactful community programs.
+            </p>
+          </div>
+          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
+             data-aos="fade-left">
+          <div class="absolute inset-0">
+            <img src="../images/executives/general-sect2.jpg" alt="General Secretary"
+              class="w-full h-full object-cover opacity-60" />
+            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+          </div>
+          <div class="relative flex flex-col items-center p-6">
+            <img src="../images/executives/general-sect2.jpg" alt="General Secretary"
+              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+            <h3 class="text-xl font-bold text-gray-800">Saqib Ali</h3>
+            <p class="text-green-700 font-semibold mb-3">General Secretary</p>
+            <p class="text-gray-700 text-center text-sm leading-relaxed">
+              Visionary leader dedicated to empowering youth through innovation, collaboration, 
+              and impactful community programs.
+            </p>
+          </div>
+          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
+             data-aos="fade-right">
+          <div class="absolute inset-0">
+            <img src="../images/executives/general-sect2.jpg" alt="Member"
+              class="w-full h-full object-cover opacity-60" />
+            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+          </div>
+          <div class="relative flex flex-col items-center p-6">
+            <img src="../images/executives/general-sect2.jpg" alt="Member"
+              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+            <h3 class="text-xl font-bold text-gray-800">Dummy Name</h3>
+            <p class="text-green-700 font-semibold mb-3">Dummy Role</p>
+            <p class="text-gray-700 text-center text-sm leading-relaxed">
+              Visionary leader dedicated to empowering youth through innovation, collaboration, 
+              and impactful community programs.
+            </p>
+          </div>
+          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <!-- Card 5 -->
+        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
+             data-aos="fade-up">
+          <div class="absolute inset-0">
+            <img src="../images/executives/general-sect2.jpg" alt="Member"
+              class="w-full h-full object-cover opacity-60" />
+            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+          </div>
+          <div class="relative flex flex-col items-center p-6">
+            <img src="../images/executives/general-sect2.jpg" alt="Member"
+              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+            <h3 class="text-xl font-bold text-gray-800">Dummy Name</h3>
+            <p class="text-green-700 font-semibold mb-3">Dummy Role</p>
+            <p class="text-gray-700 text-center text-sm leading-relaxed">
+              Visionary leader dedicated to empowering youth through innovation, collaboration, 
+              and impactful community programs.
+            </p>
+          </div>
+          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <!-- Card 6 -->
+        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
+             data-aos="fade-left">
+          <div class="absolute inset-0">
+            <img src="../images/executives/general-sect2.jpg" alt="Member"
+              class="w-full h-full object-cover opacity-60" />
+            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
+          </div>
+          <div class="relative flex flex-col items-center p-6">
+            <img src="../images/executives/general-sect2.jpg" alt="Member"
+              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
+            <h3 class="text-xl font-bold text-gray-800">Dummy Name</h3>
+            <p class="text-green-700 font-semibold mb-3">Dummy Role</p>
+            <p class="text-gray-700 text-center text-sm leading-relaxed">
+              Visionary leader dedicated to empowering youth through innovation, collaboration, 
+              and impactful community programs.
+            </p>
+          </div>
+          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- Call To Action Section -->
+  <section class="w-full bg-[#FAF3DD] py-16">
+    <div class="max-w-4xl mx-auto px-6 text-center" data-aos="zoom-in">
+      <h2 class="text-3xl font-bold text-green-800 mb-4">Join Us in Shaping the Future</h2>
+      <p class="text-gray-700 mb-8">
+        Be part of the movement that empowers youth, drives leadership, and builds communities.  
+        Whether you want to contribute or collaborate, we welcome you.
+      </p>
+      <div class="flex justify-center gap-6">
+        <a href="/pages/membership.html" class="bg-green-700 hover:bg-green-800 text-white px-6 py-3 rounded-full font-semibold shadow-md transition">
+          Join Us
+        </a>
+        <a href="/pages/contact.html" class="bg-white border border-green-700 text-green-700 hover:bg-green-100 px-6 py-3 rounded-full font-semibold shadow-md transition">
+          Contact Us
+        </a>
+      </div>
+    </div>
+  </section>
 </main>
 
 
@@ -288,5 +395,16 @@
     <span class="text-yellow-600">All rights reserved.</span>
   </div>
 </footer>
+
+<!-- AOS JS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000,
+    once: false, 
+        
+  });
+</script>
+
 </body>
 </html>
